# test_task

./: CMakeLists.txt  generate_number.hpp  main.cpp
